@@ -1,3 +1,5 @@
+* Improve memory management of Binary fields
+* Support buffer for Binary fields
 * Remove delete on Escape in editable tree
 * Use JSON-RPC
 * Limit size of field when possible
